name:                redolent-except
version:             0.1.0.0
synopsis:            Experimenting with errors
description:         Please see README.md
homepage:            http://github.com/rimmington/redolent-except#readme
license:             BSD3
license-file:        LICENSE
maintainer:          Rhys <rimmington@gmail.com>
copyright:           (c) 2015 Rhys
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Monad.Except.Union
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , ghc-prim
                     , open-union
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite redolent-except-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , redolent-except
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rimmington/redolent-except
